# temperature-humidity-monitor

./: README.md
data/: .gitignore
data/grafana/: readme.txt
data/influxdb/: readme.txt
data/mosquitto/: readme.txt
dht_client/: Cargo.toml  build.rs  build.sh  deploy.sh
dht_client/.cargo/: config.toml
dht_client/conf/: config.yaml
dht_client/proto/: dht_sensor.proto
dht_client/src/: lib.rs  main.rs
dht_driver/: .gitignore  Makefile  build.sh  deploy.sh  main.c
dht_driver/source/: pi_dht_read.c
docker-influxdb-grafana/: Dockerfile  build.sh
docker-influxdb-grafana/influxdb/: config.yaml
docker-influxdb-grafana/supervisord/: supervisord.conf
docker-mosquitto/: build.sh
docker-mosquitto/config/: mosquitto.conf  passwd
docker-raspberry-build-env/: Dockerfile  build.sh
iot_server/: .gitignore  build.sh  go.mod  go.sum  iot_server.go
iot_server/conf/: config.yaml
iot_server/proto/: dhtsensor.proto
