[package]
name = "dht_client"
version = "0.1.0"
authors = ["Emrah Tuncel <emrah.tuncel@ulakhaberlesme.com.tr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
const_format = "0.2.13"
chrono = "0.4.19"
prost = "0.7"
prost-types = "0.7"
serde_yaml = "0.8.17"

[build-dependencies]
prost-build = "0.7"

[dependencies.paho-mqtt]
version = "0.9.1"
default-features = false
features = ["bundled"]
