[package]
name = "dht_client"
version = "0.1.0"
authors = ["Emrah Tuncel <emrah.tuncel@ulakhaberlesme.com.tr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
const_format = "0.2.34"
chrono = "0.4.41"
prost = "0.14.1"
prost-types = "0.14.1"
serde_yaml = "0.9.34+deprecated"

[build-dependencies]
prost-build = "0.14.1"

[dependencies.paho-mqtt]
version = "0.13.3"
default-features = false
features = ["bundled"]
